fixed demo app height on mobile devices updated demo app to support both dark and light theme editing

--- a/example/src/styles/styles.scss
+++ b/example/src/styles/styles.scss
@@ -3,16 +3,23 @@
 // Since mynah-ui css custom properties are mapped to VSCode theme ones by default
 // here are some sample VSCode themes applied.
 @import 'themes/light+.scss';
-@import 'themes/base.scss';
 @import 'themes/light-orange.scss';
 @import 'themes/light-quiet.scss';
 @import 'themes/light-solarized.scss';
-@import 'themes/dark+.scss';
+@import 'themes/dark-plus.scss';
 @import 'themes/dark-abyss.scss';
 @import 'themes/dark-ayu-mirage.scss';
 @import 'themes/dark-dracula.scss';
 @import 'themes/dark-solarized.scss';
 
+html,
+body {
+  width: 100vw;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: block;
+}
 .mynah-extension-showcase-grid {
   &:before {
     content: '';
@@ -24,14 +31,15 @@
     background-color: var(--mynah-color-syntax-bg);
     z-index: 0;
     opacity: 0.25;
+    pointer-events: none;
   }
   transition: all 850ms cubic-bezier(0.25, 1, 0, 1);
   display: grid;
   grid-template-rows: auto 1fr;
   grid-template-columns: 2fr 3fr 2fr;
-  height: 100vh;
-  width: 100vw;
-  max-width: 100vw;
+  height: 100%;
+  width: 100%;
+  max-width: 100%;
   box-sizing: border-box;
   overflow: hidden;
   gap: var(--mynah-sizing-5);
@@ -67,7 +75,7 @@
     justify-content: flex-start;
     gap: var(--mynah-sizing-2);
     padding: var(--mynah-sizing-2);
-    
+
     label {
       cursor: pointer;
       padding: var(--mynah-sizing-3) var(--mynah-sizing-2);
@@ -360,8 +368,9 @@
     }
     > select {
       appearance: none;
+      min-width: 70px;
       cursor: pointer;
-      &.theme-selector {
+      &#theme-selector {
         max-width: 140px;
       }
     }
@@ -435,7 +444,7 @@ input.hidden {
 @media only screen and (max-width: 1280px) {
   #theme-editor-enabled,
   label[for='theme-editor-enabled'] {
-    display: none;
+    display: none !important;
   }
   .mynah-extension-showcase-grid {
     grid-template-columns: 4fr 3fr !important;
@@ -465,12 +474,13 @@ input.hidden {
   .mynah-extension-showcase-grid {
     grid-template-columns: 100% !important;
     padding: 0;
-    gap: var(--mynah-sizing-2);
+    gap: 0;
 
     #header-bar {
       padding: var(--mynah-sizing-2);
       box-shadow: none;
       border-radius: 0;
+      border: none;
     }
 
     #theme-editor {
@@ -480,6 +490,7 @@ input.hidden {
     #mynah-ui-panel {
       #amzn-mynah-website-wrapper {
         border-radius: 0;
+        border: none;
         .mynah-nav-tabs-wrapper {
           > .mynah-toggle-container > span:first-child > label {
             border-top-left-radius: initial;
@@ -504,12 +515,12 @@ input.hidden {
   }
 }
 
-html:not([theme='base']) {
+html:not([theme^='base']) {
   label[for='theme-editor-enabled'] {
     display: none !important;
   }
 }
-html:not([theme='base']) .mynah-extension-showcase-grid,
+html:not([theme^='base']) .mynah-extension-showcase-grid,
 #theme-editor-enabled:not(:checked) ~ .mynah-extension-showcase-grid {
   grid-template-columns: 1fr 2fr 2fr;
   #theme-editor {
@@ -559,7 +570,7 @@ html:not([theme='base']) .mynah-extension-showcase-grid,
   }
 }
 
-html:not([theme='base']) #console-enabled:not(:checked) ~ .mynah-extension-showcase-grid,
+html:not([theme^='base']) #console-enabled:not(:checked) ~ .mynah-extension-showcase-grid,
 #theme-editor-enabled:not(:checked) + #console-enabled:not(:checked) ~ .mynah-extension-showcase-grid {
   #console {
     display: none;
