--- a/example/src/styles/themes/dark-plus.scss
+++ b/example/src/styles/themes/dark-plus.scss
@@ -1,4 +1,4 @@
-html[theme="dark+"]:root {
+html[theme="dark-plus"]:root {
         --vscode-foreground: #cccccc;
         --vscode-disabledForeground: rgba(204, 204, 204, 0.5);
         --vscode-errorForeground: #f48771;
